--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Language Evaluation Tool</title>
-    <meta name="description" content="Language Evaluation Tool" />
-    <meta name="author" content="Example" />
+    <title>OpenAI Realtime Console</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/base.css" />
+    <!-- head -->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!-- element --></div>
+    <!-- hydration -->
     <script type="module" src="/:mount.js"></script>
   </body>
 </html>
